--- a/_config.yml
+++ b/_config.yml
@@ -95,9 +95,9 @@ analytics:
 
 # Site Author
 author:
-  name             : "Gimoon Nam"
+  name             : "GM NAM"
   avatar           :  #path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "Software Engineer at Metron HK Ltd"
+  bio              : "Software Engineer"
   location         : "Seoul"
   email            :
   links:
