--- a/_config.yml
+++ b/_config.yml
@@ -96,7 +96,7 @@ analytics:
 # Site Author
 author:
   name             : "GM NAM"
-  avatar           :  #path of avatar image, e.g. "/assets/images/bio-photo.jpg"
+  avatar           : "/assets/images/profile.jpg"
   bio              : "Software Engineer"
   location         : "Seoul"
   email            :
