--- a/_config.yml
+++ b/_config.yml
@@ -97,7 +97,7 @@ analytics:
 author:
   name             : "GM NAM"
   avatar           : "/assets/images/profile.jpg"
-  bio              : "Software Engineer"
+  bio              : "Ph.D in Physics, Software Engineer"
   location         : "Seoul"
   email            :
   links:
