--- a/_config.yml
+++ b/_config.yml
@@ -97,7 +97,7 @@ analytics:
 author:
   name             : "GM NAM"
   avatar           : "/assets/images/profile.jpg"
-  bio              : "Software Engineer \\@ Metron Hong Kong Ltd"
+  bio              : "Software Engineer @ Metron Hong Kong Ltd"
   location         : "Seoul"
   email            :
   links:
