--- a/_config.yml
+++ b/_config.yml
@@ -284,3 +284,10 @@ defaults:
       comments: # true
       share: true
       related: true
+
+plugins:
+  - jekyll-last-modified-at
+
+# Optional. The default date format, used if none is specified in the tag.
+last-modified-at:
+    date-format: '%d-%b-%y'
