--- a/_config.yml
+++ b/_config.yml
@@ -96,7 +96,7 @@ analytics:
 # Site Author
 author:
   name             : "GM NAM"
-  avatar           : #"/assets/images/profile.jpg"
+  avatar           : "/assets/images/profile.jpg"
   bio              : "used to be a camera test engineer"
   location         : "Seoul, Republic of Korea"
   email            :
