--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,6 @@ minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt"
 # Site Settings
 locale                   : "en-US"
 title                    : "GM's blog"
-timezone: Asia/Seoul
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
 name                     : "software engineer @ Metron Hong Kong Ltd"
@@ -215,8 +214,7 @@ sass:
 permalink: /:categories/:title/
 paginate: 5 # amount of posts to show
 paginate_path: /page:num/
-timezone: # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
-
+timezone: Asia/Seoul # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 
 # Plugins (previously gems:)
 plugins:
