--- a/_config.yml
+++ b/_config.yml
@@ -95,7 +95,7 @@ analytics:
 
 # Site Author
 author:
-  name             : "GM NAM"
+  name             : "Traveller"
   avatar           : #"/assets/images/profile.jpg"
   bio              : "Camera test engineer"
   location         : "Seoul, Republic of Korea"
